# fakebook

./: .gitignore  README.md  compose.yaml  start.sh
.devcontainer/: compose.yaml  devcontainer.json
ad-service/: .env  Dockerfile  instrumentation.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
ad-service/app/: layout.tsx  page.tsx  route.ts
ad-service/app/ad/[adId]/: InteractionTable.tsx  page.tsx
ad-service/app/api/ad-click/[adId]/: route.ts
ad-service/app/api/ad-link/: route.ts
ad-service/app/create/: CreationForm.tsx  page.tsx
ad-service/app/editor/: layout.tsx  page.tsx
ad-service/app/editor/create/: CreationForm.tsx  page.tsx
ad-service/app/editor/overview/: page.tsx
ad-service/app/embed/[adId]/: EmbeddedAd.tsx  page.tsx
ad-service/app/overview/: page.tsx
ad-service/components/: FormButton.tsx  FormInput.tsx  FormTextArea.tsx  Heading.tsx  NavBar.tsx  Spinner.tsx
ad-service/lib/: prisma.ts
ad-service/prisma/: schema.prisma
ad-service/prisma/migrations/20240518211101_init/: migration.sql
ad-service/prisma/migrations/20240519142308_adjust_interaction/: migration.sql
ad-service/prisma/migrations/20240519152639_remove_user/: migration.sql
benchmark/: drill.yaml  full.js  health.js  last_run.txt  last_run_simple.txt  main.js  mean.js  notes.txt  postsComments.js  requests.js  simple.js  summary.js  urls.js  userFriends.js
benchmark/results/: last_run_full.txt  last_run_health.txt  last_run_mean.txt  last_run_postComments.txt  last_run_simple.txt  last_run_userFriends.txt
benchmark/util/: requests.js  summary.js
client/: .dockerignore  .env  .gitignore  .swcrc.ts  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  relay.config.json  schema.graphql  tsconfig.json  vite.config.ts
client/src/: App.tsx  env.ts  main.tsx  relayEnvironment.ts
client/src/components/: Ad.tsx  Body.tsx  Footer.tsx  FormInput.tsx  Header.tsx  Post.tsx  PostFrame.tsx
client/src/domain/: globalState.ts
client/src/domain/body/: BodyPage.tsx
client/src/domain/date_time/: DateTime.ts
client/src/domain/home/: HomePage.tsx
client/src/domain/posts/: PostInput.tsx  PostList.tsx
client/src/domain/user/: UserPage.tsx
client/src/routing/: ErrorFallback.tsx  router.tsx
client/src/util/: DateTime.ts  submit.ts  useCurrentTime.ts  usePreloadRoute.ts
database/: Dockerfile  build.sh  start.sh
database/init/: 00_schema.sql  01_data.sql
server/: .env  Cargo.toml  Dockerfile  build.rs  drill.yaml  drill_result.txt  schema.graphql
server/migrations/: V00__schema.sql  V01__indices.sql  V03__triggers.sql
server/migrations/debug/: V02__debug_data.sql
server/src/: domain.rs  errors.rs  infrastructure.rs  main.rs  models.rs
server/src/domain/: app_user.rs  comment.rs  db_id.rs  errors.rs  post.rs  relay_meta.rs  schema.rs  viewer.rs
server/src/domain/app_user/: db.rs  domain.rs  graphql.rs
server/src/domain/comment/: db.rs  domain.rs  graphql.rs
server/src/domain/post/: db.rs  domain.rs  graphql.rs
server/src/domain/schema/: mutation.rs  query.rs  subscription.rs
server/src/domain/viewer/: domain.rs  graphql.rs
server/src/errors/: base.rs  db.rs  fatal.rs  loader.rs  mapping.rs  query.rs
server/src/infrastructure/: app_state.rs  db.rs  errors.rs  handlers.rs  logging.rs  notification_center.rs  router.rs  schema.rs  shutdown.rs  urls.rs
server/src/models/: app_user.rs  comment.rs  post.rs  schema.rs
