[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.2", features = ["dataloader", "time"] }
async-graphql-axum = "7.0.2"
async-stream = "0.3.5"
axum = { version = "0.7.6", features = ["http2", "tracing", "ws"] }
base64 = "0.22.1"
deadpool-postgres = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
opentelemetry = { version = "0.25.0", optional = true }
opentelemetry-otlp = { version = "0.25.0", features = [
    "trace",
], optional = true }
opentelemetry_sdk = { version = "0.25.0", features = [
    "rt-tokio",
], optional = true }
postgres-types = { version = "0.2.6", features = ["derive"] }
refinery = { version = "0.8.12", features = ["tokio-postgres"] }
serde = "1.0.197"
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.38.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-time-0_3"] }
tokio-stream = "0.1.14"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.26.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.8.0"

[features]
default = ["otel"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
