[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.15", features = ["dataloader", "time"] }
async-graphql-axum = "7.0.15"
async-stream = "0.3.6"
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["http2", "tracing", "ws"] }
base64 = "0.22.1"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
opentelemetry = { version = "0.27.1", optional = true }
opentelemetry-otlp = { version = "0.27.0", features = [
    "trace",
    "grpc-tonic",
], optional = true }
opentelemetry_sdk = { version = "0.27.1", features = [
    "rt-tokio",
], optional = true }
postgres-types = { version = "0.2.9", features = ["derive"] }
refinery = { version = "0.8.12", features = ["tokio-postgres"] }
serde = "1.0.217"
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-time-0_3"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.28.0", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.13.1"

[features]
default = ["otel"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
